Fixed post TOC overflow bug based on #46

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,6 +10,7 @@
   article h5,
   article h6 {
     scroll-margin-top: 10vh;
+    @apply text-primary font-medium;
   }
 
   article img,
@@ -70,6 +71,8 @@ html {
   --border-tertary: #020617;
   --brand-blue: #ff000a;
   /***/
+
+  overflow-x: hidden;
 }
 
 body {
@@ -218,12 +221,21 @@ button {
 }
 .article-content h2 {
   --tw-text-opacity: 1;
-  color: var(--primary-color);
+  color: var(--brand-color);
   font-family: 'Thames';
-  font-size: 2rem;
-  line-height: 1.333;
+  font-size: 2.3rem;
+  line-height: 1.5;
   letter-spacing: -0.01em;
   font-weight: 650;
+}
+.article-content h3 {
+  --tw-text-opacity: 1;
+  color: var(--brand-color);
+  font-family: 'Thames';
+  font-size: 1.8rem;
+  line-height: 1.2;
+  letter-spacing: -0.01em;
+  font-weight: 500;
 }
 .article-content pre {
   background: #1e293b;
@@ -372,7 +384,6 @@ code > * {
 html,
 body {
   max-width: 100vw;
-  overflow-x: hidden;
 }
 
 a {
